@@ -8,6 +8,7 @@ import org.folio.dew.batch.acquisitions.services.ConfigurationService;
 import org.folio.dew.domain.dto.CompositePoLine;
 import org.folio.dew.domain.dto.CompositePurchaseOrder;
 import org.folio.dew.domain.dto.Piece;
+import org.folio.dew.domain.dto.VendorEdiOrdersExportConfig;
 import org.folio.dew.domain.dto.acquisitions.edifact.EdiFileConfig;
 import org.folio.dew.error.NotFoundException;
 
@@ -16,7 +17,11 @@ import java.text.SimpleDateFormat;
 import java.util.List;
 import java.util.Map;
 
+import static org.folio.dew.domain.dto.VendorEdiOrdersExportConfig.IntegrationTypeEnum.CLAIMING;
+import static org.folio.dew.domain.dto.VendorEdiOrdersExportConfig.IntegrationTypeEnum.ORDERING;
+
 public class CompOrderEdiConverter {
+
   private static final String RUSH_ORDER = "224";
   private static final String NOT_RUSH_ORDER = "220";
 
@@ -29,11 +34,12 @@ public class CompOrderEdiConverter {
   }
 
   public void convertPOtoEdifact(EDIStreamWriter writer, CompositePurchaseOrder compPO,
-                                 Map<String, List<Piece>> poLineToPieces, EdiFileConfig ediFileConfig) throws EDIStreamException {
+                                 Map<String, List<Piece>> poLineToPieces, EdiFileConfig ediFileConfig,
+                                 VendorEdiOrdersExportConfig.IntegrationTypeEnum integrationType) throws EDIStreamException {
     int messageSegmentCount = 0;
 
     messageSegmentCount++;
-    writePOHeader(compPO, writer);
+    writePOHeader(integrationType, compPO, writer);
 
     String rushOrderQualifier = compPO.getCompositePoLines().stream().filter(line -> line.getRush() != null).anyMatch(CompositePoLine::getRush) ? RUSH_ORDER : NOT_RUSH_ORDER;
     messageSegmentCount++;
@@ -44,7 +50,7 @@ public class CompOrderEdiConverter {
 
     String shipToAddress = configurationService.getAddressConfig(compPO.getShipTo());
     messageSegmentCount++;
-    writeLibrary(ediFileConfig, shipToAddress, writer);
+    writeLibrary(integrationType, ediFileConfig, shipToAddress, writer);
 
     messageSegmentCount++;
     writeVendor(ediFileConfig, writer);
@@ -54,15 +60,22 @@ public class CompOrderEdiConverter {
       throw new NotFoundException(errMsg);
     }
 
-    var comPoLine = compPO.getCompositePoLines().get(0);
+    var comPoLine = compPO.getCompositePoLines().getFirst();
     if (comPoLine.getVendorDetail() != null && StringUtils.isNotBlank(comPoLine.getVendorDetail().getVendorAccount())){
       messageSegmentCount++;
       writeAccountNumber(comPoLine.getVendorDetail().getVendorAccount(), writer);
     }
 
-    messageSegmentCount++;
-    String currency = comPoLine.getCost().getCurrency();
-    writeCurrency(currency, writer);
+    if (integrationType == CLAIMING) {
+      messageSegmentCount++;
+      writeDummyReference(writer);
+    }
+
+    if (integrationType == ORDERING) {
+      String currency = comPoLine.getCost().getCurrency();
+      messageSegmentCount++;
+      writeCurrency(currency, writer);
+    }
 
     // Order lines
     int totalQuantity = 0;
@@ -70,7 +83,7 @@ public class CompOrderEdiConverter {
     for (CompositePoLine poLine : compPO.getCompositePoLines()) {
       int quantityOrdered = getPoLineQuantityOrdered(poLine);
       var pieces = poLineToPieces.getOrDefault(poLine.getId(), List.of());
-      int segments = compPoLineEdiConverter.convertPOLine(poLine, pieces, writer, ++totalNumberOfLineItems, quantityOrdered);
+      int segments = compPoLineEdiConverter.convertPOLine(integrationType, compPO, poLine, pieces, writer, ++totalNumberOfLineItems, quantityOrdered);
       messageSegmentCount += segments;
       totalQuantity += quantityOrdered;
     }
@@ -89,11 +102,12 @@ public class CompOrderEdiConverter {
   }
 
   // Order header = Start of order; EDIFACT message type - There would be a new UNH for each FOLIO PO in the file
-  private void writePOHeader(CompositePurchaseOrder compPO, EDIStreamWriter writer) throws EDIStreamException {
+  private void writePOHeader(VendorEdiOrdersExportConfig.IntegrationTypeEnum integrationType,
+                             CompositePurchaseOrder compPO, EDIStreamWriter writer) throws EDIStreamException {
     writer.writeStartSegment("UNH")
       .writeElement(compPO.getPoNumber())
       .writeStartElement()
-      .writeComponent("ORDERS")
+      .writeComponent(integrationType == ORDERING ? "ORDERS" : "OSTENQ")
       .writeComponent("D")
       .writeComponent("96A")
       .writeComponent("UN")
@@ -124,7 +138,20 @@ public class CompOrderEdiConverter {
   }
 
   // Library ID and ID type
-  private void writeLibrary(EdiFileConfig ediFileConfig, String shipToAddress, EDIStreamWriter writer) throws EDIStreamException {
+  private void writeLibrary(VendorEdiOrdersExportConfig.IntegrationTypeEnum integrationType, EdiFileConfig ediFileConfig,
+                            String shipToAddress, EDIStreamWriter writer) throws EDIStreamException {
+    if (integrationType == CLAIMING) {
+      writer.writeStartSegment("NAD")
+        .writeElement("BY")
+        .writeStartElement()
+        .writeComponent(ediFileConfig.getLibEdiCode())
+        .writeComponent("")
+        .writeComponent(ediFileConfig.getLibEdiType())
+        .endElement()
+        .writeEndSegment();
+      return;
+    }
+
     writer.writeStartSegment("NAD")
       .writeElement("BY")
       .writeStartElement()
@@ -162,6 +189,17 @@ public class CompOrderEdiConverter {
       .writeEndSegment();
   }
 
+  private void writeDummyReference(EDIStreamWriter writer) throws EDIStreamException {
+    writer.writeStartSegment("DOC")
+      .writeStartElement()
+      .writeComponent("220")
+      .endElement()
+      .writeStartElement()
+      .writeComponent("VARIOUS")
+      .endElement()
+      .writeEndSegment();
+  }
+
   // Order currency - If FOLIO default currency and vendor currency are not the same, this may include info about both currencies,
   // with different qualifiers
   private void writeCurrency(String currency, EDIStreamWriter writer) throws EDIStreamException {
@@ -193,7 +231,7 @@ public class CompOrderEdiConverter {
   }
 
   // Total number of line items
-  // 	If any line has QTY >1, then CNT+1 ≠ CNT+2
+  // If any line has QTY >1, then CNT+1 ≠ CNT+2
   private void writeNumberLineItems(EDIStreamWriter writer, int totalNumberOfLineItems) throws EDIStreamException {
     writer.writeStartSegment("CNT")
       .writeStartElement()
